[feature-update-MISSION] Fix styles for mission__content on mobile and tablet.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -151,35 +151,64 @@ a {
 .mission__content {
   background-color: var(--rgba-quarter-nickel);
   position: absolute;
-  padding: 2%;
+  padding: 30% 2% 2%;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  margin: 0 auto;
+  display: flex;
+  flex-flow: column wrap;
+  align-content: flex-end;
+  text-align: right;
 }
 .mission__content h1 {
   margin: 0 0 0.5em 0;
 }
-.mission__content h2 {
+.mission__content h3 {
+  font-style: italic;
   font-weight: 500;
+  max-width: 12.5em;
+}
+
+@media only screen and (max-width: 768px) {
+  .mission__content {
+    padding: 10% 2% 2%;
+  }
 }
 
 /* Products */
 .products {
   position: relative;
+  text-align: center;
 }
 
+.products h2 {
+  padding: 0.625em;
+}
 .products__coffees {
+  position: relative;
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-content: center;
 }
-
-.products__image {
-  min-width: 20em;
-  max-width: 25em;
+.product {
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-content: space-between;
+  flex-flow: column;
+}
+.product__image {
+  max-width: 18.75em;
   width: 100%;
   height: auto;
+}
+.product__content {
+  background-color: var(--atomic-tangerine);
+  max-width: 18.75em;
+  width: 100%;
+  color: #000;
+  text-align: left;
+  padding: auto 10px;
 }
